// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Component should return a List object with base styling 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ul
  className="c0"
>
  Lorem Ipsum
</ul>
`;

exports[`List Component should return a List object with font-size: lg 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ul
  className="c0"
>
  Lorem Ipsum
</ul>
`;

exports[`List Component should return a List object with font-size: sm 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ul
  className="c0"
>
  Lorem Ipsum
</ul>
`;

exports[`List Component should return a List object with font-style: italic 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ul
  className="c0"
>
  Lorem Ipsum
</ul>
`;

exports[`List Specific Styling should return an inline List object 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 0;
}

.c0 > li {
  display: inline-block;
}

.c0 > li:not(:last-child) {
  margin-right: calc(1rem / 2);
}

<ul
  className="c0"
>
  Lorem Ipsum
</ul>
`;

exports[`List Specific Styling should return an unstyled List object 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 0;
}

.c0 > li {
  list-style: none;
}

<ul
  className="c0"
>
  Lorem Ipsum
</ul>
`;

exports[`Numbered List Component should return a Numbered List object with base styling 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ol
  className="c0"
>
  Lorem Ipsum
</ol>
`;

exports[`Numbered List Component should return a Numbered List object with font-size: sm 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ol
  className="c0"
>
  Lorem Ipsum
</ol>
`;

exports[`Numbered List Component should return a Numbered List object with font-style: italic 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ol
  className="c0"
>
  Lorem Ipsum
</ol>
`;

exports[`Numbered List Component should return a Numbered Numbered List object with font-size: lg 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 2.5rem;
}

<ol
  className="c0"
>
  Lorem Ipsum
</ol>
`;

exports[`Numbered List Specific Styling should return an inline Numbered List object 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 0;
}

.c0 > li {
  display: inline-block;
}

.c0 > li:not(:last-child) {
  margin-right: calc(1rem / 2);
}

<ol
  className="c0"
>
  Lorem Ipsum
</ol>
`;

exports[`Numbered List Specific Styling should return an unstyled Numbered List object 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: calc(1rem * 1);
  font-weight: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.5;
  color: inherit;
  text-align: inherit;
  margin: 0 0 1rem;
  padding-left: 0;
}

.c0 > li {
  list-style: none;
}

<ol
  className="c0"
>
  Lorem Ipsum
</ol>
`;
